@@ -3,33 +3,32 @@ package com.cdx.bas.application.bank.account;
 import com.cdx.bas.domain.bank.account.BankAccount;
 import com.cdx.bas.domain.bank.account.BankAccountException;
 import com.cdx.bas.domain.bank.account.BankAccountPersistencePort;
+import com.cdx.bas.domain.message.MessageFormatter;
 import io.quarkus.hibernate.orm.panache.PanacheRepositoryBase;
 import io.quarkus.panache.common.Sort;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import jakarta.transaction.TransactionManager;
-import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import static com.cdx.bas.domain.text.MessageConstants.BANK_ACCOUNT_START;
-import static jakarta.transaction.Transactional.TxType.REQUIRED;
+import static com.cdx.bas.domain.message.CommonMessages.*;
 
 /***
  * persistence implementation for BankAccount entities
- * 
+ *
  * @author Clément Gibert
  *
  */
 @ApplicationScoped
 public class BankAccountRepository implements BankAccountPersistencePort, PanacheRepositoryBase<BankAccountEntity, Long> {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(BankAccountRepository.class);
+    public static final String ID_FIELD = "id";
 
     BankAccountMapper bankAccountMapper;
 
@@ -48,20 +47,20 @@ public class BankAccountRepository implements BankAccountPersistencePort, Panach
 
     @Override
     public List<BankAccount> getAll() {
-        return findAll(Sort.by("id")).stream()
-                .map(bankAccountEntity -> bankAccountMapper.toDto(bankAccountEntity))
-                .collect(Collectors.toList());
+        return findAll(Sort.by(ID_FIELD)).stream()
+                .map(bankAccountMapper::toDto)
+                .toList();
     }
 
     @Override
     public Optional<BankAccount> findById(long id) {
         return findByIdOptional(id).map(bankAccountMapper::toDto);
     }
-    
+
     @Override
     public BankAccount create(BankAccount bankAccount) {
         entityManager.persist(bankAccountMapper.toEntity(bankAccount));
-        logger.info(BANK_ACCOUNT_START + bankAccount.getId() + " created");
+        logger.debug(MessageFormatter.format(BANK_ACCOUNT_CONTEXT, CREATION_ACTION, SUCCESS_STATUS));
         return bankAccount;
     }
 
@@ -72,20 +71,20 @@ public class BankAccountRepository implements BankAccountPersistencePort, Panach
             getEntityManager();
             BankAccountEntity merge = entityManager.merge(entity);
             bankAccount = bankAccountMapper.toDto(merge);
-            logger.info(BANK_ACCOUNT_START + bankAccount.getId() + " updated");
+            logger.debug(MessageFormatter.format(BANK_ACCOUNT_CONTEXT, UPDATE_ACTION, SUCCESS_STATUS));
             return bankAccount;
         } catch (UnsupportedOperationException exception) {
-            throw new BankAccountException("invalid", exception);
+            throw new BankAccountException(MessageFormatter.format(BANK_ACCOUNT_CONTEXT, UPDATE_ACTION, FAILED_STATUS));
         }
     }
-    
+
     @Override
     public Optional<BankAccount> deleteById(long id) {
         Optional<BankAccountEntity> entityOptional = findByIdOptional(id);
         if (entityOptional.isPresent()) {
             BankAccountEntity entity = entityOptional.get();
             delete(entity);
-            logger.info("BankAccount " + entity.getId() + " deleted");
+            logger.debug(MessageFormatter.format(BANK_ACCOUNT_CONTEXT, DELETION_ACTION, SUCCESS_STATUS));
             return Optional.of(bankAccountMapper.toDto(entity));
         }
         return Optional.empty();
